# autotools-neptune-release

./: .gitignore  Makefile.am  README.md  TODO.org  configure.ac  neptune-release.config  neptune-release.rel.in  neptune-release.sh.in
.github/workflows/: main.yml
tests/: .gitignore  Makefile.am  atlocal.in  neptune-start.at  testsuite.at
